--- a/style.css
+++ b/style.css
@@ -20,12 +20,17 @@
 		color: #ff9b85;
 	}
 }
+html,body{
+	height:100%;
+	 margin: 0;
+}
 footer{
+	margin-top:auto;
 	background-color: #161616;
 	padding: 20px;
 	color: #fff;
 	text-align: center;
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 }
